<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_CreateNote"
        android:gravity="top"
        android:textSize="25dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateNote_Title"
        android:hint="@string/prompt_title"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateNote_TagString"
        android:hint="@string/prompt_tag"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateNote_Content"
        android:hint="@string/prompt_content"
        android:inputType="text"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/CreateNote_Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_Create"/>
    </LinearLayout>
</LinearLayout>